# vecraft

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: docker-publish.yml
docs/: architecture.md  distributed_architecture.md  distributed_architecture_migration.md  distributed_architecture_operations.md  distributed_architecture_overview.md  distributed_architecture_service_architecture.md  distributed_plan.md  single_host_architecture.md
src/core/: vector_type_interface.py
src/engine/: locks.py  transaction.py  vector_db.py
src/index/: brute_force.py  hnsw.py
src/metadata/: catalog.py
src/plugins/: image_vector.py  text_vector.py
src/query/: executor.py  plan_nodes.py  planner.py
src/storage/: file_mmap.py
src/vecraft/: cli.py  config.py
src/vecraft_api/: data_model_utils.py  data_models.py  vecraft_api.py  vecraft_rest_api.py
src/vecraft_cli/: cli_interface.py  vecraft_cli.py
tests/: test.wal  test_btree_based_location_index.py  test_collection.docsnap  test_collection.py  test_collection_rollback.py  test_hsnw.py  test_integration.py  test_json_based_location_index.py  test_metadata_index.py  test_wal_manager.py
vecraft_cli/: vecraft_cli.py
vecraft_data_model/: checksum_util.py  data_model_utils.py  data_models.py  data_packet.py  index_packets.py  query_packet.py  search_data_packet.py
vecraft_db/: Dockerfile
vecraft_exception_model/: exception.py
vecraft_operator/: Chart.yaml  Dockerfile  values.yaml
vecraft_rest_client/: vecraft_rest_api_client.py
(+252 files in other folders)
