[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecraft"
version = "0.1.0"
dependencies = [
    "numpy~=2.0.2",
    "typer~=0.15.2",
    "matplotlib~=3.9.4",
    "scikit-learn~=1.6.1",
    "pydantic~=2.11.3",
    "hnswlib~=0.8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.poetry.dependencies]
python = "^3.11"

[project.scripts]
vecraft = "src.vecraft_cli.vecraft_cli:entry_point"